<resources>
    <string name="app_name">MyProtocolNewApp</string>
    <string name="addNew">Add new</string>
    <string name="set_student">Select student</string>
    <string name="students">Students</string>

    <string name="set_trial">Select trial</string>
    <string name="enter_name">Enter name</string>

    <string name="setAnswer">Set answer</string>
    <string name="begin">Begin</string>
    <string name="have_not_trials">This student have not trials</string>
    <string name="badAnswer">Bad</string>
    <string name="with_hint">With hint</string>
    <string name="good">good</string>
    <string name="aboutStudent">About student</string>
    <string name="aboutTrial">About trial</string>


    <string name="hide">Hide</string>
    <string name="delete">delete forever</string>
    <string name="positionHide">Position is hidden</string>
    <string name="toStatistics">See statistics</string>
    <string name="allStudentsList">All students</string>
    <string name="allTrialsOfStudentList">List of trials</string>
    <string name="exitSession">Exit session</string>
    <string name="aboutProgram">About app</string>
    
    <string name="trialName">trialName</string>
    <string name="whithoutHint">Without hint</string>

    <string name="answer">Answer</string>
    <string name="rightAnswer">Right answer</string>
    <string name="wrongAnswer">Wrong answer</string>

    <string name="hints">Hints</string>

    <string name="all_psysical_hints">psysical</string>
    <string name="full_psysical_hint">full physical</string>
    <string name="partial_psysical_hint">partial physical</string>

    <string name="gesture_hint">gesture</string>

    <string name="all_verbal_hints">verbals</string>
    <string name="full_verbal_hint">full verbal</string>
    <string name="partial_verbal_hint">partial verbal</string>

    <string name="written_hint">written</string>
    <string name="visual_hint">visual</string>
    <string name="audio_hint">audio</string>
    <string name="positional_hint">positional</string>
    <string name="saveTrialResultBtn">Save result</string>

</resources>
