<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTrialName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:text="TrialName"
        app:layout_constraintBottom_toTopOf="@+id/trialCounterPerDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:layout_gravity="center"
                android:id="@+id/trialCounterPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="trialCounterPerDay"
                />

            <TextView
                android:layout_gravity="center"
                android:id="@+id/trialCountInARow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="trialCountInARow"
               />
        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/whithoutHintCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/whithoutHint"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="150dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/fullPhysHintChek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/full_psysical_hint" />

            <CheckBox
                android:id="@+id/partPsysHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/partial_psysical_hint" />

            <CheckBox
                android:id="@+id/gestHintChek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/gesture_hint" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/fullVerbHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/full_verbal_hint" />

            <CheckBox
                android:id="@+id/partVerbHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/partial_verbal_hint" />

            <CheckBox
                android:id="@+id/writHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/written_hint" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/visualHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/visual_hint" />

            <CheckBox
                android:id="@+id/audHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/audio_hint" />

            <CheckBox
                android:id="@+id/posHintCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/positional_hint" />
        </TableRow>

    </TableLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="110dp">

        <TextView
            android:id="@+id/radioBtnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer" />

        <RadioButton
            android:id="@+id/radioBtnRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rightAnswer" />

        <RadioButton
            android:id="@+id/radioBtnWrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongAnswer" />
    </RadioGroup>

    <Button
        android:id="@+id/saveResultBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp"
        android:text="@string/saveTrialResultBtn" />

</LinearLayout>